📦 refactor: 'Modificando a conversão para String'